# termux-monitor

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: build.yml
src/termux_monitor/: cli.py  config.py  core.py  tglogging.py
tests/: test_core.py
