[tool.poetry]
name = "termux-monitor"
version = "v1.2.0"
description = ""
authors = ["Ashish Kandu <ashishkandu43@gmail.com>"]
readme = "README.md"
packages = [{include = "termux_monitor", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
click = "^8.1.7"


python-dotenv = "^1.0.1"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
termux-monitor = "termux_monitor.cli:main"
